fix about image border stretching past photo

--- a/style.css
+++ b/style.css
@@ -435,6 +435,7 @@ a:hover {
 .about-image {
     display: flex;
     justify-content: center;
+    align-items: flex-start;
 }
 
 .image-wrapper {
